# univiewer

./: .gitignore  Axespart.h  CMakeLists.txt  ControlView.h  ControlView_Converter.h  ControlView_PLYfileSeries.h  ControlView_addText.h  Model.h  ParamDefine.h  Plotpart.h  README.md  Sliderbarpart.cc  Sliderbarpart.h  Textpart.h  auxfun.cc  auxfunc.h  controlview.cc  controlview.h  lutpart.h  model.cc  model.h  omegafile.cc  omegafile.h  paramdefine.h  sliderbarpart.cc  sliderbarpart.h  textpart.h  univiewer.cc  univiewer.cpp  univiewer.h
data/: mdel_HemiCylinderShell.xml  mdel_HemiSphericalShell.xml  mdel_cloth.xml  mdel_cylindricalShellRigidDiaphragm.xml  mdel_sphere.xml  testSolid1.md
